--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,48 @@
+html, body {
+    height: 100%;
+}
+
 body {
-    padding: 0;
+    margin: 0;
+}
+
+.cv {
+    display: grid;
+    height: 100%;
+    width: 80%;
+    margin: 0 auto;
+    grid-gap: 10px;
+    grid-template-areas: 
+    "header header"
+    "nav nav"
+    "aside main"
+    "footer footer";
+
+    grid-template-columns: 20% 1fr;
+    grid-template-rows: 100px 50px auto 100px;
+}
+
+.header, .nav, .aside, .main, .footer {
+    background-color: gold;
+    padding: 10px;
+}
+
+.header {
+    grid-area: header;
+}
+
+.nav {
+    grid-area: nav;
+}
+
+.aside {
+    grid-area: aside;
+}
+
+.main {
+    grid-area: main;
+}
+
+.footer {
+    grid-area: footer;
 }
