--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,10 @@ html, body {
 }
 
 body {
-    margin: 0;
+    background: linear-gradient(145deg, #ee82ee, slateblue, #ffd86a, purple);
+    padding: 40px 40px 40px 40px;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 .cv {
@@ -23,7 +26,7 @@ body {
 }
 
 .header, .nav, .aside, .main, .footer {
-    background-color: gold;
+    background-color: #FFFFFF;
     padding: 10px;
 }
 
