--- a/styles.css
+++ b/styles.css
@@ -4,25 +4,16 @@ html, body {
 
 body {
     background: linear-gradient(145deg, #ee82ee, slateblue, #ffd86a, purple);
-    padding: 40px 40px 40px 40px;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    margin: 0 auto;
 }
 
 .cv {
-    display: grid;
+    
     height: 100%;
     width: 80%;
     margin: 0 auto;
-    grid-gap: 10px;
-    grid-template-areas: 
-    "header header"
-    "nav nav"
-    "aside main"
-    "footer footer";
-
-    grid-template-columns: 20% 1fr;
-    grid-template-rows: 100px 50px auto 100px;
 }
 
 .header, .nav, .aside, .main, .footer {
@@ -31,21 +22,164 @@ body {
 }
 
 .header {
-    grid-area: header;
+   
+    height: 50px;
+    margin-bottom: 10px;
+    background: lightskyblue;
+    box-shadow: 5px 9px 20px rgba(0, 0, 0, 0.90);
 }
 
 .nav {
-    grid-area: nav;
+    height: 50px;
+    margin-bottom: 10px;
+    background: lightskyblue;
+    box-shadow: 5px 9px 20px rgba(0, 0, 0, 0.90);
+    
+}
+.nav-list {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .aside {
-    grid-area: aside;
+    margin-right: 0;
+    width: 28%;
+    background: #1e2939;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    box-shadow: 5px 9px 20px rgba(0, 0, 0, 0.90);
+}
+.avatar {
+    width: 370px;
+}
+.contacts {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #ffffff;
+}
+
+.contacts-title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 28px;
+    color: #fff;
+
+}
+
+.contacts-url {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 24px;
+    color: #fff;
+    margin-right: 10px;
+}
+
+.skills {
+    margin-left: 40px;
+    margin-right: 40px;
+    margin-top: 55px;
+}
+
+.skills-title {
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 24px;
+    color: #fff;
+    margin-bottom: 20px;
+
+}
+.skills-content {
+    font-size: 20px;
+}
+
+.item {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    margin-left: 15px;
+    color: white;
 }
 
 .main {
-    grid-area: main;
+    
+    display: flex;
+    padding-left: 80px;
+    padding-right: 80px;
+    padding-top: 50px;
+    padding-bottom: 110px;
+    margin: 0 auto;
+    box-shadow: 5px 9px 20px rgba(0, 0, 0, 0.90);
+    font-family: 'Nunito', sans-serif;
+}
+.profession {
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 24px;
+    margin-bottom: 23px;
+}
+
+.name {
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+    font-size: 45px;
+    font-weight: 700;
+    line-height: 89px;
+}
+.description {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 24px;
+    margin-top: 24px;
+    text-align: justify;
+}
+.projects-title {
+    margin-top: 20px;
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 24px;
+}
+
+.projects {
+    border-radius: 15px;
+    background-color: lightgreen;
+    text-align: center;
+    margin-bottom: 55px;
+}
+
+.url-project {
+    color: #595959;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+}
+.projects-item {
+    font-weight: 700;
+    margin-left: 30px;
+}
+.code-example {
+    border-radius: 20px;
+    background: lightgrey;
+    padding: 20px;
 }
 
 .footer {
-    grid-area: footer;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 5px 9px 20px rgba(0, 0, 0, 0.90);
+    background-color: #7E1A34;
+    display: flex;
+    flex-direction: row;
+
 }
+
