--- a/style/styles.css
+++ b/style/styles.css
@@ -1,6 +1,8 @@
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-  }
+}
 
 html, body {
     height: 100%;
@@ -8,9 +10,10 @@ html, body {
 }
 
 body {
-    background: #2F4F4F;
+    background: #2F4F4F url("your-image-url-here.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
+    background-size: cover;
     min-height: 100vh;
     margin: 0;
     padding: 0;
@@ -248,6 +251,14 @@ body {
     padding: 20px;
     margin-bottom: 40px;
 }
+.code-example:hover {
+    transform: scale(1.1);
+    transition: transform 0.5s ease;
+}
+img[alt='project'][src^='./img/project_'] {
+    width: 100%;
+    height: auto;
+}
 .certificate {
     display:flex;
     flex-direction: column;
@@ -257,7 +268,8 @@ body {
     gap: 20px;
 }
 .certificate img {
-    width: 100%;
+    max-width: 100%;
+    height: auto;
 }
 .certificate img:hover {
     transform: scale(1.1);
