--- a/style/styles.css
+++ b/style/styles.css
@@ -41,6 +41,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100px;
+    width: 100%;
     margin-bottom: 10px;
     box-shadow: 5px 9px 20px rgba(0, 0, 0, 0.90);
 }
