--- a/style/styles.css
+++ b/style/styles.css
@@ -5,14 +5,12 @@
 }
 
 html, body {
-    height: 100%;
+    max-width: 100%;
     scroll-behavior: smooth;
 }
 
 body {
-    background: #2F4F4F url("your-image-url-here.jpg");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+    background: #2F4F4F;
     background-size: cover;
     min-height: 100vh;
     margin: 0;
@@ -20,12 +18,10 @@ body {
 }
 
 .cv {
-    height: 100%;
-    width: 80%;
+    /*margin-top: 20px;*/
+
+    max-width: 3840px;
     margin: 0 auto;
-    margin-top: 40px;
-    margin-bottom: 40px;
-    max-width: 1440px;
 }
 
 .header, .nav, .aside, .main, .footer {
@@ -35,7 +31,6 @@ body {
 
 .header {
     color: white;
-    background: #171F2B;
     background: #1c2635;
     display: flex;
     justify-content: center;
@@ -152,12 +147,14 @@ body {
 }
 
 .content {
-    max-width: 864px;
+    height: auto;
+    max-width: 100%;
     margin: 0 auto;
-    padding: 0 90px;
+    padding: 0 20px;
 }
 
 .card {
+    max-width: 100%;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -170,7 +167,7 @@ body {
 }
 
 .card:hover {
-    box-shadow: 0px 14px 30px rgba(0, 0, 0, 0.30);
+    box-shadow: 0 14px 30px rgba(0, 0, 0, 0.30);
     transform: translateY(-5px);
   }
 
@@ -191,7 +188,7 @@ body {
 }
 
 .description {
-    font-size: 18px;
+    font-size: 1em;
     font-weight: 400;
     line-height: 24px;
     margin-top: 24px;
@@ -263,7 +260,7 @@ img[alt='project'][src^='./img/project_'] {
 .certificate {
     display:flex;
     flex-direction: column;
-    max-width: 100%;
+    max-width: 90%;
     justify-content: center; /* выравнивание по горизонтали */
     align-items: center; /* выравнивание по вертикали */
     gap: 20px;
@@ -280,7 +277,7 @@ img[alt='project'][src^='./img/project_'] {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 100px;
+    height: auto;
     box-shadow: 5px 9px 20px rgba(0, 0, 0, 0.90);
     background-color: #7E1A34;
     color: white;
