--- a/css/style.sass
+++ b/css/style.sass
@@ -169,6 +169,8 @@ a
     background-image: url('../assets/icons/bootstrap.svg')
   &__javascript
     background-image: url('../assets/icons/javascript.svg')
+  &__react
+    background-image: url('../assets/icons/react.svg')
   &__github
     background-image: url('../assets/icons/github.svg')
   &__figma
@@ -239,19 +241,19 @@ a
     &::after
       width: 35%
 
-.code-example
-  display: flex
-  flex-direction: column
-  .pre
-    margin: 0
-    display: flex
-    align-self: center
-    width: 100%
-  .code
-    width: 100%
-    line-height: 22px
-    padding: 0
-    background-color: #202026
+//.code-example
+//  display: flex
+//  flex-direction: column
+//  .pre
+//    margin: 0
+//    display: flex
+//    align-self: center
+//    width: 100%
+//  .code
+//    width: 100%
+//    line-height: 22px
+//    padding: 0
+//    background-color: #202026
 
 .projects
   &__wrapper
